@@ -5,6 +5,7 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.io.IOException;
+import java.lang.reflect.Field;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -16,19 +17,30 @@ import java.util.concurrent.atomic.AtomicLong;
 public class Checker {
     private static final AtomicLong lastRequest = new AtomicLong(0);
     private static final Path dockerPath = Paths.get("dock").toAbsolutePath();
-    private static final String templateName = "Template.java";
     private static final String runName = "RunMe.java";
     private static final String target = "TARGET REPLACEMENT 473882928347567473734";
 
 
     @PostMapping("check")
-    public String check(@RequestBody String input) {
+    public String check(@RequestBody String input, String id) {
+        if (input == null || id == null) {
+            return "Bad request";
+        }
+
+        int questionId;
+        try {
+            questionId = Integer.parseInt(id);
+        } catch (Exception e) {
+            return "Bad request";
+        }
+
         if (System.currentTimeMillis() - lastRequest.get() < 2000L) {
             return "STOP SPAMMING!!";
         }
         lastRequest.set(System.currentTimeMillis());
 
-        insertIntoTemplate(input);
+        Template template = new Template(questionId, input);
+        template.writeIntoTemplateFile();
 
         Path targetPath = dockerPath.resolve(runName);
 
@@ -49,14 +61,26 @@ public class Checker {
         }
     }
 
-    private void insertIntoTemplate(String content) {
-        Path template = dockerPath.resolve(templateName);
+    record Template(int id, String userInput) {
+        public void writeIntoTemplateFile() {
+            String templateCode = findTemplate(id);
 
-        try {
-            List<String> newLines = Files.lines(template).map(line -> line.replace(target, content)).toList();
-            Files.write(dockerPath.resolve(runName), newLines, StandardCharsets.UTF_8);
-        } catch (IOException e) {
-            throw new RuntimeException(e);
+            try {
+                Files.writeString(dockerPath.resolve(runName), templateCode.replaceFirst(target, userInput));
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
+        }
+
+        private String findTemplate(int id) {
+            try {
+                Class<?> clazz = Class.forName("com.ownwn.wats.problems.Problem" + id);
+                Field field = clazz.getDeclaredField("challenge");
+                return field.get(clazz).toString();
+
+            } catch (ClassNotFoundException | NoSuchFieldException | IllegalAccessException e) {
+                throw new RuntimeException(e);
+            }
         }
     }
 
